src/assets/stylesheets/deltacamp.css.scss
/* ... */
.button.button-outline:hover,
button.button-outline:hover,
input[type="submit"].button-outline:hover,
input[type="reset"].button-outline:hover,
input[type="button"].button-outline:hover,
.button.button-outline:focus,
button.button-outline:focus,
input[type="submit"].button-outline:focus,
input[type="reset"].button-outline:focus,
input[type="button"].button-outline:focus {
  background-color: $outline-btn-background-hover-color;
  border-color: $outline-btn-border-hover-color;
  color: $outline-btn-hover-color;
}

label,
.label {
  color: #aaa;
  cursor: pointer;
  font-family: "acier-bat-solid", Verdana, sans-serif;
  font-size: 1.25rem;
  letter-spacing: 1px;
}

.label:not(:last-child) {
  margin-bottom: 0.25rem;
}

input.input,
textarea.textarea {
  border-radius: 0;
  font-family: "futura-pt", Verdana, sans-serif;
  // font-family: "acier-bat-solid", Verdana, sans-serif;
  font-size: 1.5rem;
  letter-spacing: 1px;
  height: 50px;
  padding: 5px 15px 3px;
  border-bottom: 3px solid #ddd;
  box-shadow: none;
}

textarea.textarea {
  height: auto;
}

input.input:hover,
input.input:active,
input.input:focus,
textarea.textarea:hover,
textarea.textarea:focus,
textarea.textarea:active {
  border: 1px solid #ddd;
  border-bottom: 3px solid $link-color;
  box-shadow: none;
}

.has-background-grey {
  background: $grey;
}

.has-background-charcoal {
  color: white;
  background: #121217;

  h1, h2, h3, h4, h5, h6 {
    color: white;
  }
}

.has-half-opacity {
  opacity: 0.13;
}

form {
  padding: 3.5rem 0 8rem;

  @media (max-width: 800px) {
    margin: 0.25rem;
    padding: 0.5rem 0.5rem 8rem;
  }
}

.field:not(:last-child) {
  margin-bottom: 2rem;
}

.text-left {
  text-align: left;
}

.text-center {
  text-align: center;
}

.text-right {
  text-align: right;
}

.shadow {
  box-shadow: 0 15px 35px 0 rgba(42,51,83,.12),
    0 5px 15px rgba(0,0,0,.06) !important;
}

.masonry {
  margin: 0 0 40px;

  @media (max-width: 800px) {
    width: 100% !important;
  }
}

.masonry--img-container {
  transition: all 600ms cubic-bezier(0.36, 0.07, 0.19, 1.27);

  border-radius: 20px;
  padding: 5px;
  display: inline-block;
  margin-bottom: 50px;
  margin-right: 50px;
  min-height: 520px;
  max-width: 46%;
  position: relative;

  @media (max-width: 1480px) {
    max-width: 44%;
  }

  @media (max-width: 980px) {
    max-width: 100%;
  }

  @media (max-width: 600px) {
    min-height: 400px !important;
  }

  @media (max-width: 460px) {
    min-height: 370px !important;
  }
}

.masonry--img {
  border-radius: 20px;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  border-bottom: 5px solid #d4ecf8;
  transition: all 1200ms cubic-bezier(0.36, 0.07, 0.19, 1.27);

  @media (max-width: 800px) {
    max-width: 100%;
    min-height: 320px !important;
    height: auto !important;
    line-height: 1 !important;
    width: 100% !important;
  }

  @media (max-width: 600px) {
    min-height: auto !important;
  }
}

.masonry-img--caption {
  display: block;
  font-size: 1.5rem;
  position: absolute;
  margin: 0.5rem 1.5rem 1.5rem;

  @media (max-width: 600px) {
    font-size: 1.25rem;
  }
}

@keyframes shake {
  2% {
    opacity: 0.2;
    transform: translate3d(0, 6px, 0);
  }

  12% {
    opacity: 0.5;
    transform: translate3d(0, 0, 0);
  }

  27% {
    opacity: 0.8;
    transform: translate3d(0, 10px, 0);
  }

  40% {
    opacity: 0.8;
    transform: translate3d(0, 0, 0);
  }

  100% {
    opacity: 0.2;
    transform: translate3d(0, 0, 0);
  }
}

.page-transition-group {
  position: relative;
  opacity: 0;
}

.page-transition-group--active {
  opacity: 1;
  transition: opacity 3s cubic-bezier(0.6, 0, 0.20, 1);
  transition-property: opacity;
}

.animatable-content {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  transition: all 1200ms cubic-bezier(0.36, 0.07, 0.19, 1.27);
  transform: translate3d(0, 100px, 0);
}

.page-transition-entered .animatable-content {
  opacity: 1;
  transform: translate3d(0, 0, 0);
  z-index: 101;
  transition-duration: 400ms;
}

.home .page-transition-entered .animatable-content {
  transition-duration: 2000ms;
}

.page-transition-entering .animatable-content {
  opacity: 0;
  transform: translate3d(0, 20px, 0);
  z-index: 99;
}

.home .page-transition-entering .animatable-content {
  transform: translate3d(0, 0, 0);
}

.page-transition-exiting .animatable-content {
  opacity: 0;
  transform: translate3d(0, -50px, 0);
  transition-duration: 1000ms;
  z-index: 101;
}

// This doesn't work since if we're on Contact and we click Home, the class is updated
// to home right away and these transition rules will apply to the Contact page that's exiting :(
// .home .page-transition-exiting .animatable-content {
//   transform: translate3d(0, 0, 0);
//   transition-duration: 1200ms;
// }

